Fixed visual issue when high contrast enabled.

--- a/src/scripts/OSFramework/OSUI/Pattern/Rating/scss/_rating.scss
+++ b/src/scripts/OSFramework/OSUI/Pattern/Rating/scss/_rating.scss
@@ -317,3 +317,19 @@
 		}
 	}
 }
+
+// OS HighContrast Enabled -------------------------------------------------------
+///
+.os-hight-contrast {
+	.has-accessible-features {
+		.rating {
+			&.is-half input:focus + .rating-item .rating-item-half,
+			&:not(.is-half) input:focus + .rating-item .rating-item-filled {
+				&,
+				* {
+					outline: 3px solid var(--color-focus-outer);
+				}
+			}
+		}
+	}
+}
